# main

./: .gitignore  INSTALL.md  README.md
client/: client.py  quic_snapshots.py  requirements.txt
daemon/: CMakeLists.txt
daemon/include/: hid_report.h  msquic_server.h
daemon/proto/: remoter.proto
daemon/src/: main.cpp  msquic_server.cpp
docs/: proposal.md
qemu/: 0001-usb-hid-socket-backend.patch  dev-hid.c
scripts/: gen_proto.sh  netem.sh  run_daemon.sh  run_qemu.sh
